compiler/fir/analysis-tests/testData/resolve/callResolution/typealiasUnrwppingToNonExistingClassInReceiver.kt
typealias TypeAlias = <!UNRESOLVED_REFERENCE!>NonExistingClass<!>

fun buildFor() {
    val a = <!UNRESOLVED_REFERENCE!>TypeAlias<!>()
}